public_html/includes/templates/default.catalog/less/framework/buttons.less
/* Buttons & Button Groups - Bootstrap Compatible */

.btn(@type) {
  background-color: ~"var(--@{type}-button-background-color)";
  color: ~"var(--@{type}-button-text-color)";
  border: 1px solid ~"var(--@{type}-button-border-color)";
  text-decoration: none;
  &:hover:not(.active):not(.disabled):not([disabled]) {
    background-color: ~"var(--@{type}-button-background-color-hover)";
  }
  &.active {
    background: ~"var(--@{type}-button-background-color-active)";
    border-color: ~"var(--@{type}-button-border-color)";
  }
}

.btn {
  cursor: pointer;
  display: inline-block;
  padding: var(--input-padding-y) var(--input-padding-x);
  text-decoration:  none;
  font-weight: normal;

  border-radius: var(--border-radius);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
  text-align: center;

  &.btn-default { .btn("default"); }
  &.btn-primary { .btn("primary"); }
  &.btn-success { .btn("success"); }
  &.btn-danger { .btn("danger"); }

  &.btn-sm { font-size: 0.8em; }
  &.btn-lg { font-size: 1.25em; }

  &.active, &:active { box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.25) !important; }
  &.disabled, &[disabled] { opacity: 0.5; cursor: not-allowed; }
  [data-type="toggle"] { display: none; }
}

.btn-block {
  width: 100%;
}

.btn-group {
  display: inline-flex;
  border-radius: var(--border-radius);
  .btn {
    flex: 1 0 auto;
    border-radius: 0;
    font-size: inherit;
    margin-inline-start: -1px;
    &:first-child {
      border-top-left-radius: var(--border-radius);
      border-bottom-left-radius: var(--border-radius);
    }
    &:last-child {
      border-top-right-radius: var(--border-radius);
      border-bottom-right-radius: var(--border-radius);
    }
  }
}

.btn-group-vertical {
  .btn {
    display: block;
    border-radius: 0;
    font-size: inherit;
    margin-top: -1px;
    &:first-child {
      border-top-left-radius: var(--border-radius);
      border-top-right-radius: var(--border-radius);
    }
    &:last-child {
      border-bottom-left-radius: var(--border-radius);
      border-bottom-right-radius: var(--border-radius);
    }
  }
}

